--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 	
 	<ol class="n">
 		<li>
-		<a href="/boocks/8_klas_anglijska_mova_karpjuk_2016.pdf"><button class="button btn-lg btn-success">Англ. Мова</button></a>
+		<a href="/books/8_klas_anglijska_mova_karpjuk_2016.pdf"><button class="button btn-lg btn-success">Англ. Мова</button></a>
 			
 		</li>
 		<li>
-		<a href="/boocks/8_f_b_2016.pdf"><button class="button btn-lg btn-success">Фізика</button></a>
+		<a href="/books/8_f_b_2016.pdf"><button class="button btn-lg btn-success">Фізика</button></a>
 			
 		</li>
 		<li>
-		<a href="/boocks/8_klas_biologija_matjash_2016.pdf"><button class="button btn-lg btn-success">Біологія</button></a>
+		<a href="/books/8_klas_biologija_matjash_2016.pdf"><button class="button btn-lg btn-success">Біологія</button></a>
 			
 		</li>
 		
