--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<!--<meta http-equiv="X-ua-Compatible" content="IE=edge">
+	<meta http-equiv="X-ua-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/favicon.ico">-->
+    <link rel="icon" href="/favicon.ico">
 	<title>Підручники</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/css/bootstrap.css">
-	<link rel="stylesheet" href="/css/style.css">
+	<link href="/css/bootstrap.css" rel="stylesheet">
+	<link href="/css/style.css" rel="stylesheet">
 </head>
+
 <body>
+<main>
 	<div class="header">
 		<h2>
 			Підручники 8-А класу УОСО №22
 		</h2>
 		<h3>
-			:-)
+			...
 		</h3>
 	</div>
 	
@@ -37,5 +39,6 @@
 		
 	</ol>
 	
+</main>
 </body>
 </html>
