--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 				
 	<div class="book">
 				
-		<img src="/books/65817_f79132d2ad8893d83f22372a4f334b78001.jpg" alt="">
+		<img src="/books/8-klas-Geometr001.jpg" alt="">
 			
-		<a href="books/65817_f79132d2ad8893d83f22372a4f334b78.pdf"><button class="button btn-sm btn-success">11. Геометрія</button></a>
+		<a href="books/8-klas-Geometr.pdf"><button class="button btn-sm btn-success">11. Геометрія</button></a>
 			
 	</div>
 	
