--- a/index.html
+++ b/index.html
@@ -19,12 +19,8 @@
 </head>
 <body>   
     <div class="header">
-		<h2>
-			Підручники 8-А класу УОСО №22
-		</h2>
-		<h3>
-			(натискай та завантажуй)
-		</h3>
+		<h2>Підручники 8-А класу УОСО №22</h2>
+		<h3>(натискай та завантажуй)</h3>
 	</div>
 				
 	<div class="book">
