--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 				
 	<div class="book">
 				
-		<img src="./books/8-klas-Geometr001.jpg" alt="">
+		<img src="./books/Geometrija-8-klas-Jershova001.jpg" alt="">
 			
-		<a href="books/8-klas-Geometr.pdf"><button class="button btn-sm btn-success">11. Геометрія</button></a>
+		<a href="books/Geometrija-8-klas-Jershova.pdf"><button class="button btn-sm btn-success">11. Геометрія</button></a>
 			
 	</div>
 	
