--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			
 	</div>
 		
-	<div class="book">
+	<div class="book"> <span class="colortext"><b>new</b></span>
 				
 		<img src="./books/Informatyka-8kl-pohlyblena-Rudenko001.jpg" alt="">
 				
